--- a/docs/ReleaseNotes/1.3.0.0.md
+++ b/docs/ReleaseNotes/1.3.0.0.md
@@ -22,7 +22,7 @@ updated: 13 Apr 2023 -->
 ## Version 1.3.0.0-release - `<Thank you godarklight>` edition
 
 * Released
-  * 03 May 2023
+  * 01 Apr 2023
   * for Kerbal Space Program 1.12.5
   * by [zer0Kerbal](https://github.com/zer0Kerbal)
 
@@ -32,8 +32,11 @@ updated: 13 Apr 2023 -->
 ## Change Summary
 
 * Recompiled
-  * SafetyWall.dll v1.2.0.11 --> v1.3.0.3
+  * SafetyWall.dll v1.2.0.11 --> v1.3.0.17
+* Add flag
 * lint and update documentation
+* Localize
+  * English (en-us.cfg)
 
 ## See More
 
@@ -72,7 +75,7 @@ Comment, click, like, share, up-vote, subscribe
 
 <!-- shields -->
 [SHD:code]: https://img.shields.io/badge/CODE-%3C.NET%203.5%3E%20%3CC%23%205.0%3E-darkblue?style=plastic&labelColor=66ccff "Code"
-[SHD:dll]: https://img.shields.io/badge/SafetyWall.dll%20-v1.3.0.3-orange.svg?style=plastic&labelColor=darkgreen "1.2.0.3"
+[SHD:dll]: https://img.shields.io/badge/SafetyWall.dll%20-v1.3.0.17-orange.svg?style=plastic&labelColor=darkgreen "1.2.0.3"
 [SHD:mod]: https://img.shields.io/badge/SafetyWall%20(WALL)%20-v1.3.0.0--release-BADA55.svg?style=plastic&labelColor=darkgreen "1.3.0.0-release"
 [SHD:pgs]: https://img.shields.io/badge/GitHub-Pages-white?style=plastic&labelColor=9cf&logoColor=181717&logo=github/ "GitHub IO"
 
