--- a/docs/ReleaseNotes/1.3.2.0.md
+++ b/docs/ReleaseNotes/1.3.2.0.md
@@ -47,6 +47,7 @@ updated: 13 Apr 2023 -->
 >* ![English][EN] English
 >* ![Português Brasil][BR] Brazilian Portuguese (Português Brasil) - muito obrigada  [Santo](https://github.com/ClaraSantosmf)
 >* ![Français][FR] French (Français) - merci beaucoup  [Icecoptere](https://github/Icecoptere)
+>* ![Dutch (Nederlands)][NL] Dutch (Nederlands) - Bedankt [wittekop38](https://github.com/wittekop38)
 >* ***your translation here***
 >
 > HELP WANTED - See the [README in the Localization folder][lreadme] or the [Quickstart Guide][qstart] for instructions for adding or improving translations. [GitHub][GitHub:url] push is the best way to contribute. *Additions and corrections welcome!*
