--- a/docs/ReleaseNotes/1.2.0.0.md
+++ b/docs/ReleaseNotes/1.2.0.0.md
@@ -88,7 +88,7 @@ updated: 30 Mar 2022 -->
 <!-- mod -->
 [MOD:shd:stat]: https://img.shields.io/badge/SafetyWall%20(NCAT)%20-v1.2.0.0--adoption-BADA55.svg?style=plastic&labelColor=darkgreen "1.2.0.0-adoption"
 
-[CRSFG:url]: https://www.curseforge.com/kerbal/ksp-mods/SafetyWall/files "Curseforge"
+[CURSFG:url]: https://www.curseforge.com/kerbal/ksp-mods/SafetyWall/files "Curseforge"
 [GITHUB:url]: https://github.com/zer0Kerbal/SafetyWall/ "GitHub"
 
 [KSP:url]: http://kerbalspaceprogram.com/ "Kerbal Space Program"
