--- a/docs/ReleaseNotes/1.3.0.0.md
+++ b/docs/ReleaseNotes/1.3.0.0.md
@@ -14,7 +14,7 @@ TEMPLATE: ReleaseLayout.md v1.3.5.1
 created: 11 Aug 2018
 updated: 13 Apr 2023 -->
 
-[![SafetyWall (WALL)][SHD:mod]][CRSFG:url]  
+[![SafetyWall (WALL)][SHD:mod]][CURSFG:url]  
 [![KSP version][KSP:shd]][KSP:url] [![License][LIC:shd]][LIC:url] [![Pages][SHD:pgs]][pages]
 
 ![Code][SHD:code] ![SafetyWall][SHD:dll]
@@ -79,7 +79,7 @@ Comment, click, like, share, up-vote, subscribe
 [SHD:mod]: https://img.shields.io/badge/SafetyWall%20(WALL)%20-v1.3.0.0--release-BADA55.svg?style=plastic&labelColor=darkgreen "1.3.0.0-release"
 [SHD:pgs]: https://img.shields.io/badge/GitHub-Pages-white?style=plastic&labelColor=9cf&logoColor=181717&logo=github/ "GitHub IO"
 
-[CRSFG:url]: https://www.curseforge.com/kerbal/ksp-mods/SafetyWall/files "Curseforge"
+[CURSFG:url]: https://www.curseforge.com/kerbal/ksp-mods/SafetyWall/files "Curseforge"
 [GITHUB:url]: https://github.com/zer0Kerbal/SafetyWall/ "GitHub"
 
 [KSP:url]: http://kerbalspaceprogram.com/ "Kerbal Space Program"
