--- a/docs/404.md
+++ b/docs/404.md
@@ -12,8 +12,7 @@ updated: 01 Apr 2023
 
 <script src="https://kit.fontawesome.com/0ea5493613.js" crossorigin="anonymous"></script>
 <i class="fa-solid fa-meteor fa-beat-fade fa-3x" style="--fa-beat-fade-opacity: 0.1; --fa-beat-fade-scale: 1.25;color: #FF7E03" ></i>
-<!-- <i class="fa fa-gear fa-spin fa-3x" style="color: firebrick"></i> -->
-
+<link rel="stylesheet" type="text/css" href="https://zer0kerbal.github.io/SafetyWall/style.css">
 # 404 - Kerbal Not Found
 
 ## Launch error : Bill is out to launch (oops lunch)
