--- a/docs/ReleaseNotes/1.3.3.0.md
+++ b/docs/ReleaseNotes/1.3.3.0.md
@@ -46,7 +46,7 @@ updated: 13 Apr 2023 -->
 
 >* ![English][EN] English
 >* ![Português Brasil][BR] Brazilian Portuguese (Português Brasil) - muito obrigada  [Santo](https://github.com/ClaraSantosmf)
->* ![Français][FR] French (Français) - merci beaucoup  [Icecoptere](https://github/Icecoptere)
+>* ![Français][FR] French (Français) - merci beaucoup  [Icecoptere](https://github.com/Icecoptere)
 >* ![Dutch (Nederlands)][NL] Dutch (Nederlands) - Bedankt [wittekop38](https://github.com/wittekop38)
 >* ***your translation here***
 >
