--- a/docs/ReleaseNotes/1.3.4.0.md
+++ b/docs/ReleaseNotes/1.3.4.0.md
@@ -32,7 +32,7 @@ updated: 29 May 2023 -->
 
 * Localize
   * ![Russian (Русский)](https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/RU.png) Russian (Русский)
-  * Спасибо [evanisrael](https://github/evanisrael)
+  * Спасибо [evanisrael](https://github.com/evanisrael)
 
 ## See More
 
@@ -45,9 +45,9 @@ updated: 29 May 2023 -->
 
 >* ![English](https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/EN.png) English
 >* ![Português Brasil](https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/BR.png) Brazilian Portuguese (Português Brasil) - muito obrigada  [Santo](https://github.com/ClaraSantosmf)
->* ![Français](https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/FR.png) French (Français) - merci beaucoup [Icecoptere](https://github/Icecoptere)
+>* ![Français](https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/FR.png) French (Français) - merci beaucoup [Icecoptere](https://github.com/Icecoptere)
 >* ![Dutch (Nederlands)](https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/NL.png) Dutch (Nederlands) - bedankt [wittekop38](https://github.com/wittekop38)
->* ![Russian (Русский)](https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/RU.png) Russian (Русский) - спасибо [evanisrael](https://github/evanisrael)
+>* ![Russian (Русский)](https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/RU.png) Russian (Русский) - спасибо [evanisrael](https://github.com/evanisrael)
 >* ***your translation here***
 >
 > HELP WANTED: See the [README's in the Localization folder](https://github.com/zer0Kerbal/zer0Kerbal/blob/master/Localization/readme.md) for instructions for adding or improving translations. There is also the [quick start guide(s)](https://github.com/zer0Kerbal/zer0Kerbal/blob/master/Localization/quickstart.md). [GitHub][GitHub:url] push is the best way to contribute. *Additions and corrections welcome!*
